--- a/debian/rules
+++ b/debian/rules
@@ -55,8 +55,8 @@ ifneq (,$(findstring nocheck,$(DEB_BUILD_OPTIONS)))
 else
 	TIMEOUT = timeout -k 1h 1h
 	MINI_TEST = cd mono/mini && $(TIMEOUT) make check; $(KILL_MONO)
-	MONO_BOEHM_TEST = cd mono/tests && MONO_ENV_OPTIONS=--gc=boehm $(TIMEOUT) make test; $(KILL_MONO)
-	MONO_SGEN_TEST = cd mono/tests && MONO_ENV_OPTIONS=--gc=sgen $(TIMEOUT) make test; $(KILL_MONO)
+	MONO_BOEHM_TEST = cd mono/tests && MONO_ENV_OPTIONS=--gc=boehm $(TIMEOUT) make check; $(KILL_MONO)
+	MONO_SGEN_TEST = cd mono/tests && MONO_ENV_OPTIONS=--gc=sgen $(TIMEOUT) make check; $(KILL_MONO)
 endif
 
 DPKG_EXPORT_BUILDFLAGS = 1
