--- a/debian/control
+++ b/debian/control
@@ -24,7 +24,7 @@ Vcs-Browser: http://git.debian.org/?p=pkg-mono/packages/mono.git
 
 Package: mono-runtime-common
 Provides: cli-runtime, cli-virtual-machine
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: mono-common (<< 2.4), mono-jit (<< 2.4), libmono0 (<< 2.4), mono-runtime (<< 3.2.1)
 Conflicts: mono-common (<< 2.4),
            mono-jit (<< 2.4),
@@ -50,7 +50,7 @@ Description: Mono runtime - common files
  MIPS architectures. Optionally this package configures BINFMT support.
 
 Package: mono-runtime
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          mono-runtime-sgen (= ${binary:Version})
@@ -70,7 +70,7 @@ Description: Mono runtime - default version
  This package installs this architecture's default runtime version.
 
 Package: mono-runtime-sgen
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${shlibs:Depends},
          ${misc:Depends},
          mono-runtime-common (= ${binary:Version})
@@ -114,7 +114,7 @@ Description: Mono runtime - Boehm
 Package: mono-runtime-dbg
 Priority: extra
 Section: debug
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: mono-jit-dbg (<< 2.4)
 Conflicts: mono-jit-dbg (<< 2.4)
 Depends: ${misc:Depends}, mono-runtime-sgen (= ${binary:Version}), mono-runtime-boehm (= ${binary:Version})
@@ -130,7 +130,7 @@ Description: Mono runtime, debugging symbols
 
 Package: mono-utils
 Provides: cil-disassembler
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: mono-mcs (<= 1.1.6-4)
 Depends: ${shlibs:Depends}, ${misc:Depends}, libmonoboehm-2.0-1 (= ${binary:Version}),
  libmono-corlib4.5-cil (= ${source:Version})
@@ -158,10 +158,10 @@ Description: Common CA certificates (Mono keystore)
  Mono keystore.
 
 Package: mono-complete
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${misc:Depends},
          mono-runtime (= ${binary:Version}),
-         mono-runtime-sgen (= ${binary:Version}) [amd64 armel armhf i386 kfreebsd-amd64 kfreebsd-i386 s390x],
+         mono-runtime-sgen (= ${binary:Version}) [amd64 armel arm64 armhf i386 kfreebsd-amd64 kfreebsd-i386 s390x],
          libmono-2.0-1 (= ${binary:Version}),
          libmono-profiler (= ${binary:Version}),
          mono-utils (= ${binary:Version}),
@@ -195,7 +195,7 @@ Package: libmono-2.0-1
 Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: libmono-dev (<= 1.1.6-4)
 Conflicts: mono-utils (<< 1.2.3.1-4)
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmonoboehm-2.0-1 (= ${binary:Version})
+Depends: ${shlibs:Depends}, ${misc:Depends}, libmonoboehm-2.0-1 (= ${binary:Version}) [amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x], libmonosgen-2.0-1 (= ${binary:Version}) [arm64]
 Description: Mono JIT library (Default version)
  Shared library for Mono, used for embedding/hosting of the JIT.
  .
@@ -206,8 +206,8 @@ Description: Mono JIT library (Default version)
  bytecode (aka assemblies), and a class library.
 
 Package: libmono-2.0-dev
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
-Depends: ${misc:Depends}, libmonoboehm-2.0-dev (= ${binary:Version})
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Depends: ${misc:Depends}, libmonoboehm-2.0-dev (= ${binary:Version}) [amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x], libmonosgen-2.0-dev (= ${binary:Version}) [arm64]
 Description: Mono JIT library - Development files (Default version)
  Header files and static libraries for libmono-2.0.
  .
@@ -218,7 +218,7 @@ Description: Mono JIT library - Development files (Default version)
  bytecode (aka assemblies), and a class library.
 
 Package: libmonosgen-2.0-1
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Mono JIT library (SGen GC)
  Shared library for Mono, used for embedding/hosting of the JIT.
@@ -232,7 +232,7 @@ Description: Mono JIT library (SGen GC)
 Package: libmonosgen-2.0-1-dbg
 Priority: extra
 Section: debug
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${misc:Depends}, libmonosgen-2.0-1 (= ${binary:Version})
 Recommends: gdb
 Description: Mono JIT library, debugging symbols (SGen GC)
@@ -245,7 +245,7 @@ Description: Mono JIT library, debugging symbols (SGen GC)
  bytecode (aka assemblies), and a class library.
 
 Package: libmonosgen-2.0-dev
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${misc:Depends}, libmonosgen-2.0-1 (= ${binary:Version})
 Description: Mono JIT library - Development files (SGen GC)
  Header files and static libraries for libmonosgen-2.0.
@@ -296,7 +296,7 @@ Description: Mono JIT library - Development files (Boehm GC)
  bytecode (aka assemblies), and a class library.
 
 Package: libmono-profiler
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Replaces: mono-runtime (<< 2.4.2.3)
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Mono profiler libraries
@@ -2817,9 +2817,6 @@ Depends: ${misc:Depends},
          libmono-2.0-dev (>= ${source:Version}),
          libmono-2.0-dev (<< ${source:Version}.1~),
          pkg-config
-Suggests: mono-reference-assemblies-2.0,
-          mono-reference-assemblies-3.5,
-          mono-reference-assemblies-4.0
 Description: Mono development tools
  Mono is a platform for running and developing applications based on the
  ECMA/ISO Standards. Mono is an open source effort led by Xamarin.
@@ -2898,7 +2895,7 @@ Description: Mono GAC tool (for CLI 4.0)
  libraries, for CLI 4.0
 
 Package: mono-jay
-Architecture: amd64 armel armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
+Architecture: amd64 armel arm64 armhf i386 mipsel kfreebsd-amd64 kfreebsd-i386 ppc64 ppc64el s390x
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: LALR(1) parser generator oriented to Java/CLI
  Mono is a platform for running and developing applications based on the
