configure.ac magic works?

--- a/configure.ac
+++ b/configure.ac
@@ -3473,6 +3473,15 @@ if test "x$have_deprecated" = "xyes"; then
    AC_DEFINE(HAVE_DEPRECATED, 1, [Support for the deprecated attribute])
 fi
 
+AC_ARG_WITH(interpreter,             [ --with-interpreter=yes,no       Interpreter, default=no],[buildinterpreter=$with_interpreter],[buildinterpreter=no])
+if test "x$mono_feature_enable_interpreter" = "xyes"; then
+    AC_DEFINE(ENABLE_INTERPRETER, 1, [Enable interpreter in the runtime.])
+    AC_MSG_NOTICE([Enable interpreter in the runtime.])
+fi
+
+AM_CONDITIONAL(ENABLE_INTERPRETER, text x$buildinterpreter = xyes)
+
+
 dnl 
 dnl Simple Generational checks (sgen)
 dnl
@@ -3924,7 +3933,11 @@ AC_DEFINE(MONO_INSIDE_RUNTIME,1, [Disable banned functions from being used by th
 mono_build_root=`pwd`
 AC_SUBST(mono_build_root)
 
-mono_runtime=mono/mini/mono
+if test "x$mono_feature_enable_interpreter" = "xyes"; then
+	mono_runtime=mono/interpreter/mint
+else
+	mono_runtime=mono/mini/mono
+fi
 AC_SUBST(mono_runtime)
 
 mono_cfg_root=$mono_build_root/runtime
@@ -4132,6 +4145,7 @@ mono/unit-tests/Makefile
 mono/benchmark/Makefile
 mono/io-layer/Makefile
 mono/mini/Makefile
+mono/interpreter/Makefile
 mono/profiler/Makefile
 m4/Makefile
 ikvm-native/Makefile
